# calculator

./: Cargo.toml  README.md
pkg/: PKGBUILD
src/: main.rs
