[package]
name = "silico-calculator"
version = "0.1.1"
description = "A dead simple, Windows-like calculator available on all major operating systems and desktop environments."
authors = ["Violet Iapalucci"]
license = "LGPL-3.0"
readme = "README.md"
edition = "2021"

[dependencies]
eframe = "0.30.0"
image = "0.25.5"
meval = "0.2.0"
